gitops/manifests/cluster/workloads/cloudbeaver/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "CloudBeaver"
  labels:
    openshift.io/cluster-monitoring: 'true'
  name: mssql-client
